Fix project card text layout on mobile

--- a/assets/styles/home.scss
+++ b/assets/styles/home.scss
@@ -160,7 +160,7 @@
         width: 100%;
     }
 
-    .project-card-text h1 {
+    .project-card-text p {
         margin: 0.5em;
     }
 
